# pyplaceholder

./: .gitignore  LICENSE.txt  README.md  pyproject.toml  setup.py
pyplaceholder/: __init__.py  jsonplaceholder.py  test_jsonplaceholder.py
