[tool.poetry]
name = "pyplaceholder"
version = "0.2"
description = ""
authors = ["Eric Dalrymple <ericjdalrymple@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.27.1"

[tool.poetry.dev-dependencies]
pytest = "^7.1.1"
black = "^22.3.0"
pre-commit = "^2.17.0"
isort = "^5.10.1"
requests-mock = "^1.9.3"
ipdb = "^0.13.9"
flake8 = "^4.0.1"
codespell = "^2.1.0"

[tool.coverage.run]
source = ["pyplaceholder"]
omit = [
]
relative_files = true

[tool.pytest.ini_options]
addopts = "-s -rP"
markers = [
    'posts'
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
